--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>8$LSzj3lenNbI$:// CZ3457</span><br /><button
+                <div class="taobao"><span>6$soEH3K97fNM$:// MU6304</span><br /><button
                         onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
@@ -250,7 +250,7 @@
                 <b>大兽套装融合了EVO和Clup的优点并做了进一步优化，非常合适DIY，优惠力度很好，适合新手入门。<br>小兽套装比较小，但兼容性也不错，适合尝新。<br>羊毛包作为小扩展包可以无脑入，比例很合适。</b>
             </div>
             <img src="2yangmao.webp" style="width:80%" />
-
+            <div style="font-size:1.2em; "><b> 常规套装和其他DIY套装还有满送活动，没有比这个更划算的了！</b></div>
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%" />
             <br>
@@ -267,40 +267,44 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%" />
-            <a href="https://ktt.pinduoduo.com/t/i0SpcoORjE"
-                 target="_blank">
-                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
-             </a>    
+            <div class="taobao"><span>MLSYeRf褚负治9021128</span><br /><button
+                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>  
         </div>
         <!--end of tab3-->
 
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
-            <div class="taobao"><span>8(ZvZT3leJGMu):// CA1371</span><br /><button
+            <div class="taobao"><span>7(OW8Q3K9NODJ):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab4-->
 
         <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>八字环平替魔术贴</b></div>
+            <div style="font-size:1.2em; "><b>选5cm宽50cm长</b></div>
+            <div class="taobao"><span>0(lEmk3K9pC4V):// HU7679</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
-            <div class="taobao"><span>1(qdEK3leIQlS):// MF1001</span><br /><button
+            <div class="taobao"><span>6(s8Ei3K9No7g):// MF3135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
-            <div class="taobao"><span>3(kwyH3lertPv):// ZH9114</span><br /><button
+            <div class="taobao"><span>1(9fdn3K9NRIv):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>9(19c63leHX05):// CZ6135</span><br /><button
+            <div class="taobao"><span>1(NctW3K9JznR):// MF3084</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -311,7 +315,7 @@
             <img src="5wang3.webp" style="display:inline-block;width:30%;height:80%" />
             <img src="5wang1.webp" style="display:inline-block;width:30%" />
             <img src="5wang2.webp" style="display:inline-block;width:30%" />
-            <div class="taobao"><span>6(KiQT3leHcF9):// ZH9102</span><br /><button
+            <div class="taobao"><span>9(V3u33K9pA4r):// MU6304</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab5-->
@@ -324,8 +328,8 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
-            <div class="taobao"><span>0(qekf3letPi9):// ZH9114</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <div class="taobao"><span>lMUTXYI符殷合0599536</span><br /><button
+                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>
         </div>
         <!--end of tab6-->
 
@@ -333,21 +337,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>软秋千</b></div>
             <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%" />
-            <div class="taobao"><span>7(od3p3leunqk):// CA1501</span><br /><button
+            <div class="taobao"><span>0(rGD43K9FY5I):// HU7679</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
-            <div class="taobao"><span>1(Rmaj3letqJn):// MU5183</span><br /><button
+            <div class="taobao"><span>4(9T9C3K9ESA4):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
-            <div class="taobao"><span>7(kyzP3leuaj1):// MF3084</span><br /><button
+            <div class="taobao"><span>9(sNF43K9vMUO):// MF3135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab7-->
@@ -356,13 +360,13 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>3(f0KK3leuzRc):// CA1371</span><br /><button
+            <div class="taobao"><span>1(MNEE3K9zWQT):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
-            <div class="taobao"><span>5(Sf6R3leFE5f):// MF3084</span><br /><button
+            <div class="taobao"><span>1(04gl3K9z6j6):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab8-->
@@ -371,14 +375,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
             <div style="font-size:1.2em; "><b>宜家Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
-            <div class="taobao"><span>7(AZFb3leEL9W):// CZ6135</span><br /><button
+            <div class="taobao"><span>5(shMY3K9zFCe):// CA1831</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配长方形感官盆</b></div>
             <div style="font-size:1.2em; "><b>宜家SAMLA 55升可以卡在35+35x25+20cm的框架里，可以做更大的感观盆 （20管可以在淘宝Quadro中国买到）</b></div>
             <img src="9penzi2.webp" style="width:40%" />
-            <div class="taobao"><span>1(q24I3levTrN):// MF3135</span><br /><button
+            <div class="taobao"><span>8(R3qn3KkaAov):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -386,14 +390,14 @@
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>5(hrmP3lewedh):// CA1371</span><br /><button
+            <div class="taobao"><span>3(p9N73K9Aq9N):// MU6304</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
-            <div class="taobao"><span>8(iNmy3leDsOv):// HU7709</span><br /><button
+            <div class="taobao"><span>7(EFIv3Kk0S1q):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab9-->
@@ -406,7 +410,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
-            <div class="taobao"><span>8(msPT3leDNBN):// CZ3148</span><br /><button
+            <div class="taobao"><span>2(2Edh3Kk0Rme):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab10-->
@@ -415,7 +419,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>铝管</b></div>
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是85元,8根105元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
-            <div class="taobao"><span>9(TKxN3leygfD):// HU7177</span><br /><button
+            <div class="taobao"><span>5(AguK3Kkb7XU):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -429,7 +433,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头套</b></div>
             <div style="font-size:1.2em; "><b>请选择40mm无边款可以给多出来的接头和斜放的接头支撑，40mm圆形可以给平面垂直支撑的</b></div>
             <img src="11sai2.webp" style="width:40%" />
-            <div class="taobao"><span>5(aTzf3leCX1c):// CA1831</span><br /><button
+            <div class="taobao"><span>8(Q0TE3KkYj8G):// MU6304</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -477,7 +481,7 @@
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
-            <div class="taobao"><span>7(SOfN3lez147):// HU7679</span><br /><button
+            <div class="taobao"><span>7(TZdg3Kk1YsC):// CA1710</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -493,23 +497,21 @@
             <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%" />
             <div style="font-size:1.2em; "><b>羊毛厂快团团价格很美丽，别错过</b></div>
-            <a href="https://ktt.pinduoduo.com/t/4cL5o092Ic"
-                target="_blank">
-                <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
-            </a>
+            <div class="taobao"><span>VUQYRji目目目4352403</span><br /><button
+                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
             <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
             <img src="13ditan1.webp" style="width:40%" />
-            <div class="taobao"><span>8(n7Eg38dVMTW):// HU7177</span><br /><button
+            <div class="taobao"><span>2(iGKp3KkWIXh):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
             <div style="font-size:1.2em; "><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
             <img src="13ditan3.webp" style="width:40%" />
-            <div class="taobao"><span>1(wEv438deBV1):// CZ3148</span><br /><button
+            <div class="taobao"><span>7(QWLC3KkWX0Z):// MF1001</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab13-->
