--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="tab-btn-area">
         <div class="tab-btn active">选品01<br>德国原版quadro</div>
         <div class="tab-btn">选品02<br>国产元老世纪童年</div>
-        <div class="tab-btn">选品03<br>mini quadro</div>
+        <div class="tab-btn">选品03<br>mini搭搭乐</div>
         <div class="tab-btn">选品04<br>国产过河石</div>
         <div class="tab-btn">选品05<br>吊环</div>
         <div class="tab-btn">选品06<br>绳网</div>
