--- a/index.html
+++ b/index.html
@@ -272,8 +272,7 @@
         <!--end of tab2-->
 
         <div class="tab-page">
-            <div style="font-size:1.2em; "><b>🔥 为何要选择艾亚Mini搭搭乐？ 曾经风靡一时的Mini Quadro已停产多年，想买原版的只能靠运气，价格还高不说，二手的状态往往不太理想……😓<br>
-但好消息来了！经过4392小时的精心研发，艾亚Mini搭搭乐终于成功复刻经典！✨ 新版2.0配件更全，管子接头与原版完美适配，使用体验比二手原版更稳定，松紧误差极小，打造更好的拼搭感！🔧</b></div>
+            <div style="font-size:1.2em; "><b>艾亚Mini搭搭乐，复刻已经停产的mini quadro。管子接头与原版适配，误差极小。</b></div>
             <img src="3mini.webp" style="width:50%" />
             <div class="taobao"><span>MXIvuqB楚荀鲁预344021</span><br /><button
                     onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>  
