--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>6$soEH3K97fNM$:// MU6304</span><br /><button
+                <div class="taobao"><span>5$DpkZ3CvCDoB$:// CA1501</span><br /><button
                         onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
@@ -261,7 +261,7 @@
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%" />
             <br>
-            <a href="https://ktt.pinduoduo.com/t/Pw667PzdsE"
+            <a href="https://ktt.pinduoduo.com/t/CRnOV2Obea"
                  target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
             </a>
@@ -274,8 +274,10 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>艾亚Mini搭搭乐，复刻已经停产的mini quadro。管子接头与原版适配，误差极小。</b></div>
             <img src="3mini.webp" style="width:50%" />
-            <div class="taobao"><span>MXIvuqB楚荀鲁预344021</span><br /><button
-                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>  
+            <a href="https://ktt.pinduoduo.com/t/u9VzcIN9bi"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a>
         </div>
         <!--end of tab3-->
         
