--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 
 <head>
@@ -272,7 +272,7 @@
         <!--end of tab2-->
 
         <div class="tab-page">
-            <div style="font-size:1.2em; "><b>艾亚Mini搭搭乐，复刻已经停产的mini quadro。管子接头与原版适配，误差极小。</b></div>
+            <div style="font-size:1.2em; "><b>艾亚Mini搭搭乐，复刻已经停产的mini quadro。管子接头与原版适配，误差小。</b></div>
             <img src="3mini.webp" style="width:50%" />
             <a href="https://ktt.pinduoduo.com/t/u9VzcIN9bi"
                  target="_blank">
@@ -284,15 +284,17 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%" />
-            <div class="taobao"><span>ZZziMiz万金倒日463722</span><br /><button
-                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>  
+            <a href="https://ktt.pinduoduo.com/t/lAMkLBrOr0"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a> 
         </div>
         <!--end of tab4-->
 
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
-            <div class="taobao"><span>7(OW8Q3K9NODJ):// CZ6135</span><br /><button
+            <div class="taobao"><span>6(y1sN3Cwgjmm):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab5-->
@@ -300,28 +302,28 @@
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>八字环平替魔术贴</b></div>
             <div style="font-size:1.2em; "><b>选5cm宽50cm长</b></div>
-            <div class="taobao"><span>0(lEmk3K9pC4V):// HU7679</span><br /><button
+            <div class="taobao"><span>3(NGZD3CwheNq):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
-            <div class="taobao"><span>6(s8Ei3K9No7g):// MF3135</span><br /><button
+            <div class="taobao"><span>3(XFDb3CwS380):// MU6304</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
-            <div class="taobao"><span>1(9fdn3K9NRIv):// CA1371</span><br /><button
+            <div class="taobao"><span>5(z5T83CwSmwj):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>1(NctW3K9JznR):// MF3084</span><br /><button
+            <div class="taobao"><span>8(FHU33CwrUzC):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -332,7 +334,7 @@
             <img src="5wang3.webp" style="display:inline-block;width:30%;height:80%" />
             <img src="5wang1.webp" style="display:inline-block;width:30%" />
             <img src="5wang2.webp" style="display:inline-block;width:30%" />
-            <div class="taobao"><span>9(V3u33K9pA4r):// MU6304</span><br /><button
+            <div class="taobao"><span>7(pvQV3Cwtidy):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab6-->
@@ -345,8 +347,10 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
-            <div class="taobao"><span>lMUTXYI符殷合0599536</span><br /><button
-                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>
+            <a href="https://ktt.pinduoduo.com/t/yOe0jK5eLH"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a>
         </div>
         <!--end of tab7-->
 
@@ -356,19 +360,24 @@
             <img src="7qiuqian1.webp" style="width:40%" />
             <div class="taobao"><span>0(rGD43K9FY5I):// HU7679</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            要质量好的可以选择Avadar的布秋千
+             <a href="https://ktt.pinduoduo.com/t/H2QFXRXUCN"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
-            <div class="taobao"><span>4(9T9C3K9ESA4):// HU7709</span><br /><button
+            <div class="taobao"><span>7(DbZq3CwAvc6):// CZ6144</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
-            <div class="taobao"><span>9(sNF43K9vMUO):// MF3135</span><br /><button
+            <div class="taobao"><span>7(TPJE3CDadp8):// MU5183</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab8-->
@@ -377,13 +386,13 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>1(MNEE3K9zWQT):// CZ6135</span><br /><button
+            <div class="taobao"><span>0(W44i3Cw5FIZ):// CA1710</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
-            <div class="taobao"><span>1(04gl3K9z6j6):// ZH9114</span><br /><button
+            <div class="taobao"><span>7(C1HI3CwAIPO):// MF1001</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab9-->
@@ -392,14 +401,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
             <div style="font-size:1.2em; "><b>宜家Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
-            <div class="taobao"><span>5(shMY3K9zFCe):// CA1831</span><br /><button
+            <div class="taobao"><span>5(XYVu3CD009j):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配长方形感官盆</b></div>
             <div style="font-size:1.2em; "><b>宜家SAMLA 55升可以卡在35+35x25+20cm的框架里，可以做更大的感观盆 （20管可以在淘宝Quadro中国买到）</b></div>
             <img src="9penzi2.webp" style="width:40%" />
-            <div class="taobao"><span>8(R3qn3KkaAov):// CA1501</span><br /><button
+            <div class="taobao"><span>9(jVzB3CDbNnq):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -407,14 +416,14 @@
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>3(p9N73K9Aq9N):// MU6304</span><br /><button
+            <div class="taobao"><span>7(JQIB3CDY75o):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
-            <div class="taobao"><span>7(EFIv3Kk0S1q):// HU7709</span><br /><button
+            <div class="taobao"><span>2(GVzk3CDYKgZ):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab10-->
@@ -427,7 +436,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
-            <div class="taobao"><span>2(2Edh3Kk0Rme):// MF3106</span><br /><button
+            <div class="taobao"><span>3(mW3b3CDcg34):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab11-->
@@ -436,28 +445,28 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>铝管</b></div>
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是85元,8根105元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
-            <div class="taobao"><span>5(AguK3Kkb7XU):// ZH9102</span><br /><button
+            <div class="taobao"><span>1(ZuUR3CD1PeO):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管塞</b></div>
             <div style="font-size:1.2em; "><b>请选择A=43.5mm，直接备注颜色就可以经典色的选红绿蓝黄，home色的可以选灰白黑</b></div>
             <img src="11sai1.webp" style="width:40%" />
-            <div class="taobao"><span>http://e.tb.cn/h.guITmsu68OUP6g2?tk=HKS63kbWw6I HU9196</span><br /><button
+            <div class="taobao"><span>http://e.tb.cn/h.TU44vO7E1FgYFD2?tk=EDAk3CD2r6d </span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头套</b></div>
             <div style="font-size:1.2em; "><b>请选择40mm无边款可以给多出来的接头和斜放的接头支撑，40mm圆形可以给平面垂直支撑的</b></div>
             <img src="11sai2.webp" style="width:40%" />
-            <div class="taobao"><span>8(Q0TE3KkYj8G):// MU6304</span><br /><button
+            <div class="taobao"><span>2(Al5T3CDdDGP):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头孔塞</b></div>
             <div style="font-size:1.2em; "><b>请选择A=32.6mm，可以固定27mm直径的铝管或木棍在接头上不易滑动</b></div>
             <img src="11sai3.webp" style="width:40%" />
-            <div class="taobao"><span>http://e.tb.cn/h.gGvpNubCrGYF0qa?tk=dblW3kbN9Kn ZH4920</span><br /><button
+            <div class="taobao"><span>http://e.tb.cn/h.TU44vO7E1FgYFD2?tk=EDAk3CD2r6d</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
 
             
@@ -486,19 +495,19 @@
             <div style="font-size:1.2em; "><b>适配|吉祥如意小裁缝|洞洞板的配件</b></div>
             <img src="12pj1.webp" style="display:inline-block;width:18%" />
             <img src="12pj2.webp" style="display:inline-block;width:18%" />
-            <div class="taobao"><span>5(joQT3leyqYC):// ZH9114</span><br /><button
+            <div class="taobao"><span>1(QUJK3CDeCuX):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>适配|哎哟妈呀|洞洞板的配件</b></div>
             <img src="12pj3.webp" style="width:40%" />
-            <div class="taobao"><span>3(vd7W3lezJTo):// HU7177</span><br /><button
+            <div class="taobao"><span>8(ELJR3CDj1hc):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
-            <div class="taobao"><span>7(TZdg3Kk1YsC):// CA1710</span><br /><button
+            <div class="taobao"><span>5(u3qe3CDms3Q):// MF3084</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -514,8 +523,10 @@
             <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%" />
             <div style="font-size:1.2em; "><b>羊毛厂快团团价格很美丽，别错过</b></div>
-            <div class="taobao"><span>VUQYRji目目目4352403</span><br /><button
-                    onclick="clip(this)">复制快团团口令，粘贴至快团团搜索栏搜索商品</button></div>
+            <a href="https://ktt.pinduoduo.com/t/yOe0jK5eLH"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
@@ -566,7 +577,7 @@
             <div style="font-size:1.2em; "><b>适配攀爬架也可以单独放在地上玩。5厘米高处可以直接放置，超过5厘米建议放在安装的大板上不要单独使用。使用感官垫后表面会相对硬一些，但大人坐在上面更有安全感。</b>
             </div>
             <img src="16ganguandian.webp" style="width:40%" />
-            <a href="https://ktt.pinduoduo.com/t/EQLI22qZ3n"
+            <a href="https://ktt.pinduoduo.com/t/SNjjrnpNaS"
                 target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
             </a>
@@ -581,21 +592,12 @@
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Bike8平衡车</b></div>
-            <div style="font-size:1.2em; "><b>很轻便，减震效果好，非竞赛类的选择元气系列就足够</b></div>
-            <img src="15bike8.webp" style="display:inline-block;width:50%" />
-             <a href="https://ktt.pinduoduo.com/t/Xz4AEvcJ1A"
-                 target="_blank">
+            Totstuff磁力积木
+            <a href="https://ktt.pinduoduo.com/t/XGM571fz8W"
+                target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
             </a>
-            <br>
-            <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>美朵嘉蚊帐</b></div>
-            <div style="font-size:1.2em; "><b>全包蚊帐，质量不错抗造，售后服务也很好，南方必备</b></div><
-            <img src="15wenz.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>4(Ogvu38dfpQM):// CA1501</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
-            <br>
+              <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>睿思重力轨道球</b></div>
             <div style="font-size:1.2em; "><b>开放性STEM玩具，可以直接入经典版，亚马逊也可以买到少儿版</b></div><
