--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="攀爬架, 爬爬架, quadro, 吞金兽驯兽师，驯兽师羊毛厂">
     <meta name="apple-mobile-web-app-title" content="羊毛厂">
     <meta name="google-site-verification" content="o7OyMXeaQLqCcWFLUIoRlUurThMOReYF_pQxd6HPh0Y" />
+  <title>驯兽师羊毛厂</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6065671789763206"
+     crossorigin="anonymous"></script>
     <style>
         body {
             font-size: 24px;
