--- a/index.html
+++ b/index.html
@@ -235,15 +235,12 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>5$DpkZ3CvCDoB$:// CA1501</span><br /><button
-                        onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
-                打开淘宝查看商品<br>
+                淘宝搜索|Quadro中国|查看商品<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
-                下单购买商品，先不付款<br>
+                下单购买商品，备注|吞金兽驯兽师|，先不付款<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 截屏发给吞金兽驯兽师<br>
-                并在客服留言#吞金兽驯兽师<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 商家后台改价<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
@@ -255,12 +252,10 @@
         <!--end of tab1-->
 
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <div style="font-size:1.2em; ">
-                <b>大兽套装融合了EVO和Clup的优点并做了进一步优化，非常合适DIY，优惠力度很好，适合新手入门。<br>小兽套装比较小，但兼容性也不错，适合尝新。<br>羊毛包作为小扩展包可以无脑入，比例很合适。</b>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂优惠</b></div>
+                <b>DIY中的B1套装很不错，优惠力度很好，适合新手入门。</b>
             </div>
-            <img src="2yangmao.webp" style="width:80%" />
-            <div style="font-size:1.2em; "><b> 常规套装和其他DIY套装还有满送活动，没有比这个更划算的了！</b></div>
+            <div style="font-size:1.2em; "><b> 常规套装和其他DIY套装有满送活动，详情请见羊毛厂快团团</b></div>
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%" />
             <br>
@@ -433,7 +428,7 @@
 
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>亚克力板</b></div>
-            <div style="font-size:1.2em; "><b>可以淘宝搜索【亚克力球直销】或者【百川亚克力】，百川便宜些但是容易出错，海外党慎选</b></div>
+            <div style="font-size:1.2em; "><b>可以淘宝搜索【艾亚教具】【亚克力球直销】或者【百川亚克力】，其中【艾亚教具】透明度最好，洞洞板细节处理最到位圆洞完全不划手。【百川亚克力】便宜些但是容易出错，海外党慎选</b></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
